lab9_kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: frontend
spec:
  ingressClassName: nginx
  rules:
  - host: podburtnyi-artem-028.k8s.praktikum-services.tech
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - podburtnyi-artem-028.k8s.praktikum-services.tech
